feat() clean app

--- a/libs/mix-lib/project.json
+++ b/libs/mix-lib/project.json
@@ -3,7 +3,7 @@
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "projectType": "library",
   "sourceRoot": "libs/mix-lib/src",
-  "prefix": "mix.aio",
+  "prefix": "mix",
   "targets": {
     "test": {
       "executor": "@nrwl/jest:jest",
