--- a/nx.json
+++ b/nx.json
@@ -1,6 +1,6 @@
 {
   "$schema": "./node_modules/nx/schemas/nx-schema.json",
-  "npmScope": "mix.aio",
+  "npmScope": "mix",
   "affected": {
     "defaultBase": "master"
   },
