--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start:kanban": "nx serve mix-kanban",
     "start:database": "nx serve mix-database",
     "start:shell": "nx serve shell",
-    "build-app:kanban": "nx build mix-kanban --baseHref=[[basePath]]",
+    "build-app:kanban": "nx build mix-kanban --deploy-url=[[basePath]]",
     "build-app:database": "nx build mix-database --baseHref=[[basePath]]",
     "build-app:shell": "nx build shell",
     "build": "nx build",
