--- a/apps/shell/project.json
+++ b/apps/shell/project.json
@@ -57,10 +57,10 @@
       "executor": "@nx/angular:webpack-dev-server",
       "configurations": {
         "production": {
-          "browserTarget": "shell:build:production"
+          "buildTarget": "shell:build:production"
         },
         "development": {
-          "browserTarget": "shell:build:development"
+          "buildTarget": "shell:build:development"
         }
       },
       "defaultConfiguration": "development",
@@ -77,7 +77,7 @@
       }
     },
     "lint": {
-      "executor": "@nx/linter:eslint",
+      "executor": "@nx/eslint:lint",
       "outputs": ["{options.outputFile}"],
       "options": {
         "lintFilePatterns": ["apps/shell/**/*.ts", "apps/shell/**/*.html"]
@@ -87,14 +87,7 @@
       "executor": "@nx/jest:jest",
       "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
-        "jestConfig": "apps/shell/jest.config.ts",
-        "passWithNoTests": true
-      },
-      "configurations": {
-        "ci": {
-          "ci": true,
-          "codeCoverage": true
-        }
+        "jestConfig": "apps/shell/jest.config.ts"
       }
     },
     "serve-static": {
