--- a/libs/mix-ui/src/json-editor/project.json
+++ b/libs/mix-ui/src/json-editor/project.json
@@ -5,7 +5,7 @@
   "sourceRoot": "libs/mix-ui/src/json-editor",
   "targets": {
     "lint": {
-      "executor": "@nx/linter:eslint",
+      "executor": "@nx/eslint:lint",
       "outputs": ["{options.outputFile}"],
       "options": {
         "lintFilePatterns": [
