--- a/package.json
+++ b/package.json
@@ -22,18 +22,18 @@
   "dependencies": {
     "@angular-architects/module-federation": "^16.0.4",
     "@angular-architects/module-federation-tools": "^16.0.4",
-    "@angular/animations": "16.1.8",
-    "@angular/cdk": "^16.0.3",
-    "@angular/common": "16.1.8",
-    "@angular/compiler": "16.1.8",
-    "@angular/core": "16.1.8",
-    "@angular/elements": "^16.2.9",
-    "@angular/forms": "16.1.8",
-    "@angular/platform-browser": "16.1.8",
-    "@angular/platform-browser-dynamic": "16.1.8",
-    "@angular/pwa": "^16.1.8",
-    "@angular/router": "16.1.8",
-    "@angular/service-worker": "16.1.8",
+    "@angular/animations": "17.0.2",
+    "@angular/cdk": "17.0.0",
+    "@angular/common": "17.0.2",
+    "@angular/compiler": "17.0.2",
+    "@angular/core": "17.0.2",
+    "@angular/elements": "17.0.2",
+    "@angular/forms": "17.0.2",
+    "@angular/platform-browser": "17.0.2",
+    "@angular/platform-browser-dynamic": "17.0.2",
+    "@angular/pwa": "16.2.10",
+    "@angular/router": "17.0.2",
+    "@angular/service-worker": "17.0.2",
     "@apollo/client": "^3.7.17",
     "@microsoft/signalr": "7.0.12",
     "@ngneat/cmdk": "^1.0.1",
@@ -45,7 +45,7 @@
     "@ngneat/transloco": "^4.2.7",
     "@ngrx/component-store": "^16.0.0",
     "@ngx-formly/core": "^6.1.6",
-    "@nrwl/angular": "16.1.4",
+    "@nrwl/angular": "17.1.1",
     "@swimlane/ngx-charts": "^20.1.2",
     "@taiga-ui/addon-editor": "^3.24.0",
     "@taiga-ui/addon-mobile": "3.39.1",
@@ -79,48 +79,48 @@
     "tippy.js": "^6.3.7",
     "tslib": "^2.3.0",
     "yargs-parser": "^21.1.1",
-    "zone.js": "~0.11.4"
+    "zone.js": "0.14.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "16.1.8",
-    "@angular-devkit/core": "16.1.8",
-    "@angular-devkit/schematics": "16.1.8",
-    "@angular-eslint/eslint-plugin": "16.1.0",
-    "@angular-eslint/eslint-plugin-template": "16.1.0",
-    "@angular-eslint/template-parser": "16.1.0",
-    "@angular/cli": "16.1.8",
-    "@angular/compiler-cli": "16.1.8",
-    "@angular/language-service": "16.1.8",
+    "@angular-devkit/build-angular": "17.0.0",
+    "@angular-devkit/core": "17.0.0",
+    "@angular-devkit/schematics": "17.0.0",
+    "@angular-eslint/eslint-plugin": "17.0.1",
+    "@angular-eslint/eslint-plugin-template": "17.0.1",
+    "@angular-eslint/template-parser": "17.0.1",
+    "@angular/cli": "~17.0.0",
+    "@angular/compiler-cli": "17.0.2",
+    "@angular/language-service": "17.0.2",
     "@nrwl/cli": "14.8.6",
-    "@nrwl/cypress": "16.1.4",
-    "@nrwl/eslint-plugin-nx": "16.1.4",
-    "@nrwl/jest": "16.1.4",
-    "@nrwl/linter": "16.1.4",
-    "@nrwl/nx-cloud": "16.0.5",
-    "@nrwl/workspace": "16.1.4",
-    "@nx/cypress": "16.1.4",
-    "@nx/jest": "16.1.4",
-    "@nx/js": "16.1.4",
-    "@nx/web": "16.1.4",
+    "@nrwl/cypress": "17.1.1",
+    "@nrwl/eslint-plugin-nx": "17.1.1",
+    "@nrwl/jest": "17.1.1",
+    "@nrwl/linter": "17.1.1",
+    "@nrwl/nx-cloud": "16.5.2",
+    "@nrwl/workspace": "17.1.1",
+    "@nx/cypress": "17.1.1",
+    "@nx/jest": "17.1.1",
+    "@nx/js": "17.1.1",
+    "@nx/web": "17.1.1",
     "@nxrocks/nx-flutter": "^8.0.1",
-    "@schematics/angular": "16.1.8",
+    "@schematics/angular": "17.0.0",
     "@types/crypto-js": "^4.1.1",
     "@types/jest": "29.4.4",
     "@types/node": "16.11.7",
-    "@typescript-eslint/eslint-plugin": "5.58.0",
-    "@typescript-eslint/parser": "5.58.0",
-    "cypress": "^12.11.0",
-    "eslint": "~8.15.0",
-    "eslint-config-prettier": "8.1.0",
-    "eslint-plugin-cypress": "^2.10.3",
+    "@typescript-eslint/eslint-plugin": "6.9.1",
+    "@typescript-eslint/parser": "6.9.1",
+    "cypress": "^13.0.0",
+    "eslint": "8.46.0",
+    "eslint-config-prettier": "9.0.0",
+    "eslint-plugin-cypress": "^2.13.4",
     "jest": "29.4.3",
     "jest-environment-jsdom": "29.4.3",
-    "jest-preset-angular": "13.1.1",
+    "jest-preset-angular": "13.1.3",
     "ngx-build-plus": "^16.0.0",
-    "nx": "16.1.4",
+    "nx": "17.1.1",
     "prettier": "^2.6.2",
     "ts-jest": "29.1.0",
     "ts-node": "10.9.1",
-    "typescript": "5.0.4"
+    "typescript": "5.2.2"
   }
 }
