--- a/apps/mix-cms/project.json
+++ b/apps/mix-cms/project.json
@@ -33,6 +33,7 @@
         "styles": [
           "node_modules/@taiga-ui/core/styles/taiga-ui-theme.less",
           "node_modules/@taiga-ui/core/styles/taiga-ui-fonts.less",
+          "libs/share-styles/src/index.scss",
           "apps/mix-cms/src/styles.scss"
         ],
         "scripts": [],
