--- a/package.json
+++ b/package.json
@@ -48,13 +48,13 @@
     "@nrwl/angular": "17.1.1",
     "@swimlane/ngx-charts": "^20.1.2",
     "@taiga-ui/addon-editor": "^3.24.0",
-    "@taiga-ui/addon-mobile": "3.54.0",
-    "@taiga-ui/addon-preview": "3.54.0",
-    "@taiga-ui/addon-table": "3.54.0",
-    "@taiga-ui/cdk": "3.54.0",
-    "@taiga-ui/core": "3.54.0",
-    "@taiga-ui/icons": "3.54.0",
-    "@taiga-ui/kit": "3.54.0",
+    "@taiga-ui/addon-mobile": "3.55.0",
+    "@taiga-ui/addon-preview": "3.55.0",
+    "@taiga-ui/addon-table": "3.55.0",
+    "@taiga-ui/cdk": "3.55.0",
+    "@taiga-ui/core": "3.55.0",
+    "@taiga-ui/icons": "3.55.0",
+    "@taiga-ui/kit": "3.55.0",
     "@tinkoff/ng-dompurify": "^4.0.0",
     "@tinkoff/ng-polymorpheus": "4.2.0",
     "ag-grid-angular": "^30.0.6",
@@ -74,6 +74,7 @@
     "ngx-monaco-editor": "^12.0.0",
     "posthtml": "^0.16.6",
     "posthtml-attrs-sorter": "^1.1.0",
+    "remeda": "^1.29.0",
     "rxjs": "7.8.1",
     "taiga-ui": "^3.24.0",
     "tippy.js": "^6.3.7",
