--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "@apollo/client": "^3.7.17",
     "@microsoft/signalr": "7.0.12",
     "@ngneat/cmdk": "^1.0.1",
-    "@ngneat/dialog": "^4.1.0",
+    "@ngneat/dialog": "5.0.0",
     "@ngneat/edit-in-place": "^1.6.1",
     "@ngneat/helipopper": "^7.1.1",
     "@ngneat/hot-toast": "^5.0.1",
