--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "@ngneat/cmdk": "^1.0.1",
     "@ngneat/dialog": "5.0.0",
     "@ngneat/edit-in-place": "^1.6.1",
-    "@ngneat/helipopper": "^7.1.1",
+    "@ngneat/helipopper": "9.0.0",
     "@ngneat/hot-toast": "^5.0.1",
     "@ngneat/overview": "^5.0.0",
     "@ngneat/transloco": "^4.2.7",
