--- a/apps/mix-cms/project.json
+++ b/apps/mix-cms/project.json
@@ -157,5 +157,10 @@
       }
     }
   },
-  "tags": []
+  "tags": [],
+  "schematics": {
+    "@schematics/angular:component": {
+      "style": "scss"
+    }
+  }
 }
