--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@taiga-ui/experimental": "^3.57.0",
     "@taiga-ui/icons": "3.55.0",
     "@taiga-ui/kit": "3.55.0",
+    "@taiga-ui/layout": "^3.57.0",
     "@tinkoff/ng-dompurify": "^4.0.0",
     "@tinkoff/ng-polymorpheus": "4.2.0",
     "ag-grid-angular": "^30.0.6",
