--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "@taiga-ui/layout": "^3.57.0",
     "@tinkoff/ng-dompurify": "^4.0.0",
     "@tinkoff/ng-polymorpheus": "4.2.0",
+    "@worktile/gantt": "^16.0.2",
     "ag-grid-angular": "^30.0.6",
     "ag-grid-community": "^30.0.6",
     "ang-jsoneditor": "^3.1.0",
@@ -66,9 +67,11 @@
     "angularx-qrcode": "^16.0.0",
     "apollo-angular": "^5.0.0",
     "crypto-js": "^4.1.1",
+    "date-fns": "^2.30.0",
     "fs": "0.0.1-security",
     "glob": "^9.3.2",
     "graphql": "^16.7.1",
+    "html2canvas": "^1.4.1",
     "js-beautify": "^1.14.7",
     "jsoneditor": "^9.10.2",
     "lru-cache": "^9.1.2",
