feat(): update to new db app

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start:kanban": "nx serve mix-kanban",
     "start:database": "nx serve mix-database",
     "start:shell": "nx serve shell",
-    "build-app:kanban": "nx build mix-kanban --deploy-url=[[basePath]]",
+    "build-app:kanban": "nx build mix-kanban",
     "build-app:database": "nx build mix-database --baseHref=[[basePath]]",
     "build-app:shell": "nx build shell",
     "build": "nx build",
@@ -28,6 +28,7 @@
     "@angular/compiler": "17.0.2",
     "@angular/core": "17.0.2",
     "@angular/elements": "17.0.2",
+    "@angular/fire": "^17.0.0",
     "@angular/forms": "17.0.2",
     "@angular/platform-browser": "17.0.2",
     "@angular/platform-browser-dynamic": "17.0.2",
