--- a/libs/mix-share/src/modules/auth/project.json
+++ b/libs/mix-share/src/modules/auth/project.json
@@ -1,16 +1,16 @@
 {
-  "name": "@mixcore/ui/checkbox",
+  "name": "@mixcore/share/auth",
   "$schema": "../../../node_modules/nx/schemas/project-schema.json",
   "projectType": "library",
-  "sourceRoot": "libs/mix-ui/src/checkbox",
+  "sourceRoot": "libs/mix-share/src/modules/auth",
   "targets": {
     "lint": {
       "executor": "@nx/eslint:lint",
       "outputs": ["{options.outputFile}"],
       "options": {
         "lintFilePatterns": [
-          "libs/mix-ui/src/checkbox/**/*.ts",
-          "libs/mix-ui/src/checkbox/**/*.html"
+          "libs/mix-share/src/modules/auth/**/*.ts",
+          "libs/mix-share/src/modules/auth/**/*.html"
         ]
       }
     }
