feat(4ps): mock form view

--- a/apps/mix-database/project.json
+++ b/apps/mix-database/project.json
@@ -33,6 +33,7 @@
         "styles": [
           "node_modules/@taiga-ui/core/styles/taiga-ui-theme.less",
           "node_modules/@taiga-ui/core/styles/taiga-ui-fonts.less",
+          "node_modules/gridstack/dist/gridstack.min.css",
           "libs/share-styles/src/index.scss",
           "apps/mix-database/src/styles.scss"
         ],
