--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "fs": "0.0.1-security",
     "glob": "^9.3.2",
     "graphql": "^16.7.1",
+    "gridstack": "^10.0.1",
     "html2canvas": "^1.4.1",
     "js-beautify": "^1.14.7",
     "jsoneditor": "^9.10.2",
