--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -28,6 +28,9 @@
       "@mixcore/module/form-editor": [
         "libs/mix-share/src/modules/form-editor/index.ts"
       ],
+      "@mixcore/module/account": [
+        "libs/mix-share/src/modules/account/index.ts"
+      ],
       "@mixcore/module/auth": ["libs/mix-share/src/modules/auth/index.ts"],
       "@mixcore/share/animation": ["libs/mix-share/src/animations/index.ts"],
       "@mixcore/share/api": ["libs/mix-share/src/api-service/index.ts"],
