feat(4ps): add create job

--- a/apps/mix-database/tsconfig.json
+++ b/apps/mix-database/tsconfig.json
@@ -21,7 +21,8 @@
     "noPropertyAccessFromIndexSignature": true,
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
-    "lib": ["es2020", "dom"]
+    "lib": ["es2020", "dom"],
+    "allowSyntheticDefaultImports": true
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
