--- a/package.json
+++ b/package.json
@@ -67,6 +67,8 @@
     "angular-tabler-icons": "^2.13.0",
     "angularx-qrcode": "^16.0.0",
     "apollo-angular": "^5.0.0",
+    "cron-validate": "^1.4.5",
+    "cronstrue": "^2.47.0",
     "crypto-js": "^4.1.1",
     "date-fns": "^2.30.0",
     "fs": "0.0.1-security",
@@ -77,7 +79,10 @@
     "js-beautify": "^1.14.7",
     "jsoneditor": "^9.10.2",
     "lru-cache": "^9.1.2",
+    "luxon": "^3.4.4",
+    "moment-timezone": "^0.5.44",
     "monaco-editor": "^0.38.0",
+    "ngx-material-timepicker": "^13.1.1",
     "ngx-monaco-editor": "^12.0.0",
     "posthtml": "^0.16.6",
     "posthtml-attrs-sorter": "^1.1.0",
