--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -66,6 +66,7 @@
       "@mixcore/ui/icon-button": ["libs/mix-ui/src/icon-button/index.ts"],
       "@mixcore/ui/inline-input": ["libs/mix-ui/src/inline-input/index.ts"],
       "@mixcore/ui/input": ["libs/mix-ui/src/input/index.ts"],
+      "@mixcore/ui/input-cron": ["libs/mix-ui/src/input-cron/index.ts"],
       "@mixcore/ui/input-number": ["libs/mix-ui/src/input-number/index.ts"],
       "@mixcore/ui/input-tag": ["libs/mix-ui/src/input-tag/index.ts"],
       "@mixcore/ui/json": ["libs/mix-ui/src/json-editor/index.ts"],
